Update Menubar for all files + link element

--- a/IHM/KDMUSIQUE/accueil.html
+++ b/IHM/KDMUSIQUE/accueil.html
@@ -45,46 +45,54 @@
     <div class="mainBody">
         <div class="categories">
             <div class="categoriesSelection">
-                <span class="category" id="accueil">
-                    <a class="icon">
+                <a class="icon" href="accueil.html">
+                    <span class="category" id="accueil">
                         Accueil
-                    </a>
                     <img src="icon/Discover.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
-                <span class="category" id="album">
-                    <a class="icon">
-                        Album
-                    </a>
+                    </span>
+                </a>
+                <a class="icon" href="album.html">
+                    <span class="category" id="album">
+                        Album                    
                     <img src="icon/Albums.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
-                <span class="category" id="favoris">
-                    <a class="icon">
-                        Favoris
-                    </a>
+                    </span>
+                </a>
+                <a class="icon" href="favoris.html">
+                    <span class="category" id="favoris">                   
+                        Favoris                    
                     <img src="icon/Favourite.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
-                <span class="category">
-                    <a class="icon">
-                        Playlist
-                    </a>
-                    <img src="icon/Plus.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
-                <span class="playlist">
-                    <a href="#">Playlist 1</a>
+                    </span>
+                </a>
+                <a class="icon" href="playlist.html">
+                    <span class="category">                    
+                        Playlist                   
+                    <img src="icon/Plus.png" style="width:20px; height:20px; margin-left: 40px;">               
+                    </span>
+                </a>
+                <a href="playlist1.html">
+                    <span class="playlist">
+                        Playlist 1
                     <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
-                <span class="playlist">
-                    <a href="#">Playlist 2</a>
+                    </span>
+                </a>
+                <a href="#">
+                    <span class="playlist">
+                        Playlist 2
                     <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
-                <span class="playlist">
-                    <a href="#">Playlist 3</a>
+                    </span>
+                </a>
+                <a href="#">
+                    <span class="playlist">
+                        Playlist 3
+                    <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">                  
+                    </span>
+                </a>
+                <a href="#">
+                    <span class="playlist">
+                        Playlist 4
                     <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
-                <span class="playlist">
-                    <a href="#">Playlist 4</a>
-                    <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
+                    </span>
+                </a>
             </div>
         </div>
 
@@ -487,7 +495,7 @@
                             <div class="row"  >
                                 <div class="col-3">
                                     <div class="theme">
-                                        <a href="accueil.html">
+                                        <a href="theme.html">
                                             <img src="images/thème/radio.jpg" alt="theme">
                                             <div class="card-img-overlay" >
                                                 <span class="txttheme" >Radio</span>
@@ -497,7 +505,7 @@
                                 </div>
                                 <div class="col-3">
                                     <div class="theme">
-                                        <a href="accueil.html">
+                                        <a href="theme.html">
                                             <img src="images/thème/thugian.jpg" alt="theme">
                                             <div class="card-img-overlay">
                                                 <span class="txttheme">Se détendre</span>
@@ -507,7 +515,7 @@
                                 </div>
                                 <div class="col-3">
                                     <div class="theme">
-                                        <a href="accueil.html">
+                                        <a href="theme.html">
                                             <img src="images/thème/tiectung.jpg" alt="theme">
                                             <div class="card-img-overlay">
                                                 <span class="txttheme">Fête</span>
@@ -517,7 +525,7 @@
                                 </div>
                                 <div class="col-3">
                                     <div class="theme">
-                                        <a href="accueil.html">
+                                        <a href="theme.html">
                                             <img src="images/thème/yoga.jpg" alt="theme">
                                             <div class="card-img-overlay">
                                                 <span class="txttheme">Yoga</span>
@@ -531,7 +539,7 @@
                             <div class="row" >
                                 <div class="col-3">
                                     <div class="theme">
-                                        <a href="accueil.html">
+                                        <a href="theme.html">
                                             <img src="images/thème/dinner.jpg" alt="theme">
                                             <div class="card-img-overlay" >
                                                 <span class="txttheme" >Dinner</span>
@@ -541,7 +549,7 @@
                                 </div>
                                 <div class="col-3">
                                     <div class="theme">
-                                        <a href="accueil.html">
+                                        <a href="theme.html">
                                             <img src="images/thème/dulich.jpg" alt="theme">
                                             <div class="card-img-overlay">
                                                 <span class="txttheme">Voyager</span>
@@ -551,7 +559,7 @@
                                 </div>
                                 <div class="col-3">
                                     <div class="theme">
-                                        <a href="accueil.html">
+                                        <a href="theme.html">
                                             <img src="images/thème/motivation.jpg" alt="theme">
                                             <div class="card-img-overlay">
                                                 <span class="txttheme">Motivation</span>
@@ -561,7 +569,7 @@
                                 </div>
                                 <div class="col-3">
                                     <div class="theme">
-                                        <a href="accueil.html">
+                                        <a href="theme.html">
                                             <img src="images/thème/playgame.jpg" alt="theme">
                                             <div class="card-img-overlay">
                                                 <span class="txttheme">Jouer au jeu</span>
@@ -632,34 +640,6 @@
                     Malgré la lumière, on ne voit plus que nous <br>
                     La musique s'est arrêtée, les aiguilles se figent et je sens, je te sens</p>
             </div>
-        </div>
-    </div>
-
-        <div class="wrapLyrics">
-            <label>Danse</label>
-            <p class="artist">Lomepal</p>
-            <p id="lyrics">Hey, j'repensais à...
-                <br>
-                Yeah
-                <br>
-                Fais la cour aux femmes <br>
-                Je fais la cour aux femmes <br>
-                Hey, hey, yeah <br>
-                On l'a fait dans le sofa <br>
-                Je l'ai fait dans l'œsophage <br>
-                Hey, hey <br>
-                Pauvre de moi, j'me souvenais pas <br>
-                Qu'on avait le pouvoir de danser comme ça <br>
-                Quand on se laisse aller, laisse-toi aller <br>
-                Laisse nos énergies faire, je veux plus parler <br>
-                Je donnerais tout ce que j'ai sur moi <br>
-                Juste pour te voir danser encore une fois <br>
-                Quand tu te laisses aller, laisse-toi aller <br>
-                Oublie les autres connards qui te regardent, yeah <br>
-                Malgré la lumière, on ne voit plus que nous <br>
-                La musique s'est arrêtée, les aiguilles se figent et je sens, je te sens <br>
-                Malgré la lumière, on ne voit plus que nous <br>
-                La musique s'est arrêtée, les aiguilles se figent et je sens, je te sens</p>
         </div>
     </div>
 
