--- a/IHM/KDMUSIQUE/favoris.html
+++ b/IHM/KDMUSIQUE/favoris.html
@@ -45,46 +45,54 @@
     <div class="mainBody">
         <div class="categories">
             <div class="categoriesSelection">
-                <span class="category" id="accueil">
-                    <a class="icon">
+                <a class="icon" href="accueil.html">
+                    <span class="category" id="accueil">
                         Accueil
-                    </a>
                     <img src="icon/Discover.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
-                <span class="category" id="album">
-                    <a class="icon">
-                        Album
-                    </a>
+                    </span>
+                </a>
+                <a class="icon" href="album.html">
+                    <span class="category" id="album">
+                        Album                    
                     <img src="icon/Albums.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
-                <span class="category" id="favoris">
-                    <a class="icon">
-                        Favoris
-                    </a>
+                    </span>
+                </a>
+                <a class="icon" href="favoris.html">
+                    <span class="category" id="favoris">                   
+                        Favoris                    
                     <img src="icon/Favourite.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
-                <span class="category">
-                    <a class="icon">
-                        Playlist
-                    </a>
-                    <img src="icon/Plus.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
-                <span class="playlist">
-                    <a href="#">Playlist 1</a>
+                    </span>
+                </a>
+                <a class="icon" href="playlist.html">
+                    <span class="category">                    
+                        Playlist                   
+                    <img src="icon/Plus.png" style="width:20px; height:20px; margin-left: 40px;">               
+                    </span>
+                </a>
+                <a href="playlist1.html">
+                    <span class="playlist">
+                        Playlist 1
                     <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
-                <span class="playlist">
-                    <a href="#">Playlist 2</a>
+                    </span>
+                </a>
+                <a href="#">
+                    <span class="playlist">
+                        Playlist 2
                     <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
-                <span class="playlist">
-                    <a href="#">Playlist 3</a>
+                    </span>
+                </a>
+                <a href="#">
+                    <span class="playlist">
+                        Playlist 3
+                    <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">                  
+                    </span>
+                </a>
+                <a href="#">
+                    <span class="playlist">
+                        Playlist 4
                     <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
-                <span class="playlist">
-                    <a href="#">Playlist 4</a>
-                    <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
-                </span>
+                    </span>
+                </a>
             </div>
         </div>
 
@@ -98,7 +106,7 @@
                                 <a href="#">1. Song 1</a>
                             </div>
                             <div class="author">
-                                <a href="#">Taylor Swift</a>
+                                <a href="artistes.html">Taylor Swift</a>
                             </div>
                             <div class="toolBox">
                                 <ul>
@@ -112,7 +120,7 @@
                                 <a href="#">1. Song 1</a>
                             </div>
                             <div class="author">
-                                <a href="#">Taylor Swift</a>
+                                <a href="artistes.html">Taylor Swift</a>
                             </div>
                             <div class="toolBox">
                                 <ul>
@@ -126,7 +134,7 @@
                                 <a href="#">2. Song 2</a>
                             </div>
                             <div class="author">
-                                <a href="#">Taylor Swift</a>
+                                <a href="artistes.html">Taylor Swift</a>
                             </div>
                             <div class="toolBox">
                                 <ul>
@@ -140,7 +148,7 @@
                                 <a href="#">3. Song 3</a>
                             </div>
                             <div class="author">
-                                <a href="#">Taylor Swift</a>
+                                <a href="artistes.html">Taylor Swift</a>
                             </div>
                             <div class="toolBox">
                                 <ul>
@@ -154,7 +162,7 @@
                                 <a href="#">4. Song 4</a>
                             </div>
                             <div class="author">
-                                <a href="#">Taylor Swift</a>
+                                <a href="artistes.html">Taylor Swift</a>
                             </div>
                             <div class="toolBox">
                                 <ul>
@@ -168,7 +176,7 @@
                                 <a href="#">5. Song 5</a>
                             </div>
                             <div class="author">
-                                <a href="#">Taylor Swift</a>
+                                <a href="artistes.html">Taylor Swift</a>
                             </div>
                             <div class="toolBox">
                                 <ul>
@@ -182,7 +190,7 @@
                                 <a href="#">6. Song 6</a>
                             </div>
                             <div class="author">
-                                <a href="#">Taylor Swift</a>
+                                <a href="artistes.html">Taylor Swift</a>
                             </div>
                             <div class="toolBox">
                                 <ul>
@@ -196,7 +204,7 @@
                                 <a href="#">7. Song 7</a>
                             </div>
                             <div class="author">
-                                <a href="#">Taylor Swift</a>
+                                <a href="artistes.html">Taylor Swift</a>
                             </div>
                             <div class="toolBox">
                                 <ul>
@@ -210,7 +218,7 @@
                                 <a href="#">8. Song 8</a>
                             </div>
                             <div class="author">
-                                <a href="#">Taylor Swift</a>
+                                <a href="artistes.html">Taylor Swift</a>
                             </div>
                             <div class="toolBox">
                                 <ul>
@@ -224,7 +232,7 @@
                                 <a href="#">9. Song 9</a>
                             </div>
                             <div class="author">
-                                <a href="#">Taylor Swift</a>
+                                <a href="artistes.html">Taylor Swift</a>
                             </div>
                             <div class="toolBox">
                                 <ul>
@@ -248,32 +256,48 @@
                                      <div class="slide slide_1">
                                         <div class="slide-content">
                                            <div class="artist">
-                                               <img src="images/circle.png">
-                                               <img src="images/circle.png">
-                                               <img src="images/circle.png">
-                                               <img src="images/circle.png">                                                                                        
+                                                <a href="artistes.html"><img src="images/circle.png"></a>
+                                                <a href="artistes.html"><img src="images/circle.png"></a>
+                                                <a href="artistes.html"><img src="images/circle.png"></a>
+                                                <a href="artistes.html"><img src="images/circle.png"></a>                                                                                      
                                            </div>
                                            <div class="artist-name">
-                                               <label>Post Malone</label>
-                                               <label>Post Malone</label>
-                                               <label>Post Malone</label>
-                                               <label>Post Malone</label>
+                                               <a href="artistes.html">
+                                                <label>Post Malone</label>
+                                               </a>
+                                               <a href="artistes.html">
+                                                <label>Post Malone</label>
+                                               </a>
+                                               <a href="artistes.html">
+                                                <label>Post Malone</label>
+                                               </a>
+                                               <a href="artistes.html">
+                                                <label>Post Malone</label>
+                                               </a>
                                            </div>
                                         </div>
                                      </div>
                                      <div class="slide slide_2">
                                         <div class="slide-content">
                                             <div class="artist">
-                                                <img src="images/circle.png">
-                                                <img src="images/circle.png">
-                                                <img src="images/circle.png">
-                                                <img src="images/circle.png">                                                                                        
+                                                <a href="artistes.html"><img src="images/circle.png"></a>
+                                                <a href="artistes.html"><img src="images/circle.png"></a>
+                                                <a href="artistes.html"><img src="images/circle.png"></a>
+                                                <a href="artistes.html"><img src="images/circle.png"></a>                                                                                       
                                             </div>
                                             <div class="artist-name">
-                                                <label>Post Malone</label>
-                                                <label>Post Malone</label>
-                                                <label>Post Malone</label>
-                                                <label>Post Malone</label>
+                                                <a href="artistes.html">
+                                                    <label>Post Malone</label>
+                                                </a>
+                                                <a href="artistes.html">
+                                                    <label>Post Malone</label>
+                                                </a>
+                                                <a href="artistes.html">
+                                                    <label>Post Malone</label>
+                                                </a>
+                                                <a href="artistes.html">
+                                                    <label>Post Malone</label>
+                                                </a>
                                             </div>
                                         </div>
                                      </div>
