--- a/IHM/KDMUSIQUE/accueil.html
+++ b/IHM/KDMUSIQUE/accueil.html
@@ -69,25 +69,25 @@
                     <img src="icon/Plus.png" style="width:20px; height:20px; margin-left: 40px;">               
                     </span>
                 </a>
-                <a href="playlist1.html">
+                <a class="icon" href="playlist1.html">
                     <span class="playlist">
                         Playlist 1
                     <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
                     </span>
                 </a>
-                <a href="#">
+                <a class="icon" href="#">
                     <span class="playlist">
                         Playlist 2
                     <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
                     </span>
                 </a>
-                <a href="#">
+                <a class="icon" href="#">
                     <span class="playlist">
                         Playlist 3
                     <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">                  
                     </span>
                 </a>
-                <a href="#">
+                <a class="icon" href="#">
                     <span class="playlist">
                         Playlist 4
                     <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
@@ -105,15 +105,6 @@
                         <div class="carousel-inner">
                           <div class="carousel-item active">
                             <div class="row"  >
-                                <div class="col">
-                                    <div class="album">
-                                        <a href="accueil.html">
-                                            <img src="images/circle.png" alt="circle" >
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
-                                        </a>
-                                    </div>
-                                </div>
                                 <div class="col">
                                     <div class="album">
                                         <a href="#">
@@ -157,15 +148,6 @@
                             <div class="row" id="row2" >
                                 <div class="col">
                                     <div class="album">
-                                        <a href="accueil.html">
-                                            <img src="images/circle.png" alt="circle" >
-                                            <div class="nomDeAlbum">Circles</div>
-                                            <div class="chanteur">Post Malone</div>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="album">
                                         <a href="#">
                                             <img src="images/circle.png" alt="circle" >
                                             <div class="nomDeAlbum">Circles</div>
@@ -204,11 +186,11 @@
                           </div>
                           
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleControls1" role="button" data-slide="prev">
+                        <a class="carousel-control-prev" href="#carouselExampleControls1" role="button" data-slide="prev" style="width: 50px;">
                           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                           <span class="sr-only">Previous</span>
                         </a>
-                        <a class="carousel-control-next" href="#carouselExampleControls1" role="button" data-slide="next">
+                        <a class="carousel-control-next" href="#carouselExampleControls1" role="button" data-slide="next" style="width: 50px;">
                           <span class="carousel-control-next-icon" aria-hidden="true"></span>
                           <span class="sr-only">Next</span>
                         </a>
