--- a/IHM/KDMUSIQUE/search.html
+++ b/IHM/KDMUSIQUE/search.html
@@ -7,7 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/search.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -24,9 +25,10 @@
 
             <!--Search và micro-->
             <div class="input-group  mr-sm-2" id="searchhd">
-                <input class="form-control" type="search" placeholder="Search" aria-label="Search"  >
+                <input id="transcript" class="form-control" type="search" placeholder="Search" aria-label="Search">
                 <div class="input-group-append">
-                    <button id="btnSearchByVoice" onclick="SearchByVoice()" type="button" class="btn btn-light" style="box-shadow: 0 0;">
+                    <button id="btnSearchByVoice" onclick="SearchByVoice()" type="button" class="btn btn-light"
+                        style="box-shadow: 0 0;">
                         <i class="fa fa-microphone"></i>
                     </button>
                 </div>
@@ -45,7 +47,13 @@
     </div>
     <div class="container" id="body">
         <div class="popup">
-            <span class="popuptext" id="popupContent">Parlez quelques choses...</span>
+            <form id="labnol" action="search.html" method="GET">
+                <div class="popuptext" id="popupContent">Parlez quelques choses...
+                    <div class="speech" onclick="startDictation()">
+                        <img src="images/micro.png" />
+                    </div>
+                </div>
+            </form>
         </div>
         <div id="ResultFound">
             <div class="row" id="row1">
@@ -200,9 +208,9 @@
                 </div>
             </div>
         </div>
-        
+
     </div>
-    <div id="footer" >
+    <div id="footer">
         <div id="contentft" class="row">
             <!--LOGO và cre-->
             <div class="col-5">
@@ -240,9 +248,15 @@
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
     <script src="js/search.js"></script>
 </body>
 
