--- a/IHM/KDMUSIQUE/search.html
+++ b/IHM/KDMUSIQUE/search.html
@@ -49,7 +49,7 @@
         <div class="popup">
             <form id="labnol" action="search.html" method="GET">
                 <div class="popuptext" id="popupContent">Parlez quelques choses...
-                    <div class="speech" onclick="startDictation()">
+                    <div class="speech">
                         <img src="images/micro.png" />
                     </div>
                 </div>
@@ -208,7 +208,7 @@
                 </div>
             </div>
         </div>
-
+        <div id="temp"></div>
     </div>
     <div id="footer">
         <div id="contentft" class="row">
