--- a/IHM/KDMUSIQUE/artistes.html
+++ b/IHM/KDMUSIQUE/artistes.html
@@ -102,15 +102,6 @@
             <div class="row" id="row1">
                 <div class="col">
                     <div class="album">
-                        <a href="accueil.html">
-                            <img src="images/circle.png" alt="circle" height="200" width="200">
-                            <div class="nomDeAlbum">Circles</div>
-                            <div class="chanteur">Post Malone</div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="album">
                         <a href="#">
                             <img src="images/circle.png" alt="circle" height="200" width="200">
                             <div class="nomDeAlbum">Circles</div>
@@ -147,15 +138,6 @@
                 </div>
             </div>
             <div class="row" id="row2">
-                <div class="col">
-                    <div class="album">
-                        <a href="accueil.html">
-                            <img src="images/circle.png" alt="circle" height="200" width="200">
-                            <div class="nomDeAlbum">Circles</div>
-                            <div class="chanteur">Post Malone</div>
-                        </a>
-                    </div>
-                </div>
                 <div class="col">
                     <div class="album">
                         <a href="#">
@@ -230,34 +212,17 @@
                         </a>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="album">
-                        <a href="#">
-                            <img src="images/circle.png" alt="circle" height="200" width="200">
-                            <div class="nomDeAlbum">Circles</div>
-                            <div class="chanteur">Post Malone</div>
-                        </a>
-                    </div>
-                </div>
             </div>
             <br>
             <br>
     
             <!--Autre artistes-->
             <h1  id="row0">L'Artistes</h1>
-            <div>
+            <div class="wrap-carousel">
                 <div id="carouselExampleControls3" class="carousel slide" data-ride="carousel" style="width:100%">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <div class="row"  >
-                            <div class="col">
-                                <div class="album">
-                                    <a href="accueil.html">
-                                        <img src="images/circle.png" alt="circle" class="formartist">
-                                        <div class="chanteur">Post Malone</div>
-                                    </a>
-                                </div>
-                            </div>
+                        <div class="row">
                             <div class="col">
                                 <div class="album">
                                     <a href="accueil.html">
@@ -297,14 +262,6 @@
                             <div class="col">
                                 <div class="album">
                                     <a href="accueil.html">
-                                        <img src="images/circle.png" alt="circle" class="formartist">
-                                        <div class="chanteur">Post Malone</div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="album">
-                                    <a href="accueil.html">
                                         <img src="images/circle.png" alt="circle" class="formartist" >
                                         <div class="chanteur">Post Malone</div>
                                     </a>
@@ -338,11 +295,11 @@
                       </div>
                      
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls3" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#carouselExampleControls3" role="button" data-slide="prev" style="width: 50px;">
                       <span class="carousel-control-prev-icon" aria-hidden="true"  id="btnprev"></span>
                       <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls3" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#carouselExampleControls3" role="button" data-slide="next" style="width: 50px;">
                       <span class="carousel-control-next-icon" aria-hidden="true"  id="btnnext"></span>
                       <span class="sr-only">Next</span>
                     </a>
