--- a/IHM/KDMUSIQUE/playlist1.html
+++ b/IHM/KDMUSIQUE/playlist1.html
@@ -70,7 +70,7 @@
                     </span>
                 </a>
                 <a href="playlist1.html">
-                    <span class="playlist">
+                    <span class="playlist" id="p1">
                         Playlist 1
                     <img src="icon/Add.png" style="width:20px; height:20px; margin-left: 40px;">
                     </span>
