--- a/IHM/KDMUSIQUE/search.html
+++ b/IHM/KDMUSIQUE/search.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/search.css" />
+    <link rel="stylesheet" href="css/test.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -45,6 +46,8 @@
 
         </nav>
     </div>
+
+
     <div class="container" id="body">
         <div class="popup">
             <form id="labnol" action="search.html" method="GET">
@@ -210,6 +213,8 @@
         </div>
         <div id="temp"></div>
     </div>
+
+
     <div id="footer">
         <div id="contentft" class="row">
             <!--LOGO và cre-->
