--- a/IHM/KDMUSIQUE/playlist.html
+++ b/IHM/KDMUSIQUE/playlist.html
@@ -64,7 +64,7 @@
                     </span>
                 </a>
                 <a class="icon" href="playlist.html">
-                    <span class="category">                    
+                    <span class="category" id="playlist">                    
                         Playlist                   
                     <img src="icon/Plus.png" style="width:20px; height:20px; margin-left: 40px;">               
                     </span>
