--- a/IHM/KDMUSIQUE/theme.html
+++ b/IHM/KDMUSIQUE/theme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Thème</title>
     <!--CSS-->
     <link rel="stylesheet" href="css/theme.css">
     <link rel="stylesheet" href="css/test.css">
@@ -198,19 +198,11 @@
             <br>
             <!--Artistes-->
             <h1  id="row0">L'Artistes</h1>
-            <div>
+            <div id="wrap-carousel">
                 <div id="carouselExampleControls3" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <div class="row"  >
-                            <div class="col">
-                                <div class="album">
-                                    <a href="artistes.html">
-                                        <img src="images/circle.png" alt="circle" style="border-radius:48%">
-                                        <div class="chanteur">Post Malone</div>
-                                    </a>
-                                </div>
-                            </div>
+                        <div class="row">
                             <div class="col">
                                 <div class="album">
                                     <a href="#">
@@ -246,15 +238,7 @@
                         </div>
                       </div>
                       <div class="carousel-item ">
-                        <div class="row" id="row2" >
-                            <div class="col">
-                                <div class="album">
-                                    <a href="accueil.html">
-                                        <img src="images/circle.png" alt="circle" style="border-radius:48%">
-                                        <div class="chanteur">Post Malone</div>
-                                    </a>
-                                </div>
-                            </div>
+                        <div class="row" id="row2">
                             <div class="col">
                                 <div class="album">
                                     <a href="#">
@@ -293,11 +277,11 @@
                       </div>
                      
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls3" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#carouselExampleControls3" role="button" data-slide="prev" style="width: 50px;">
                       <span class="carousel-control-prev-icon" aria-hidden="true"  id="btnprev"></span>
                       <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls3" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#carouselExampleControls3" role="button" data-slide="next" style="width: 50px;">
                       <span class="carousel-control-next-icon" aria-hidden="true"  id="btnnext"></span>
                       <span class="sr-only">Next</span>
                     </a>
@@ -400,11 +384,11 @@
                       </div>
                      
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls4" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#carouselExampleControls4" role="button" data-slide="prev" style="width: 50px;">
                       <span class="carousel-control-prev-icon" aria-hidden="true"  id="btnprev"></span>
                       <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls4" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#carouselExampleControls4" role="button" data-slide="next" style="width: 50px;">
                       <span class="carousel-control-next-icon" aria-hidden="true"  id="btnnext"></span>
                       <span class="sr-only">Next</span>
                     </a>
