--- a/IHM/KDMUSIQUE/theme.html
+++ b/IHM/KDMUSIQUE/theme.html
@@ -96,7 +96,7 @@
         </div>
 
         <div class="container" id="content">
-            <h1 id="row0">Le thème Yoga</h1>
+            <h1 id="row0">Le thème Radio</h1>
             <!--Les Chansons-->
             <div>
                 <div class="row" id="row2">
@@ -259,7 +259,6 @@
                                 <div class="album">
                                     <a href="#">
                                         <img src="images/circle.png" alt="circle" style="border-radius:48%">
-                                        <div class="nomDeAlbum">Circles</div>
                                         <div class="chanteur">Post Malone</div>
                                     </a>
                                 </div>
@@ -268,7 +267,6 @@
                                 <div class="album">
                                     <a href="artistes.html">
                                         <img src="images/circle.png" alt="circle" style="border-radius:48%">
-                                        <div class="nomDeAlbum">Circles</div>
                                         <div class="chanteur">Post Malone</div>
                                     </a>
                                 </div>
