--- a/IHM/KDMUSIQUE/album.html
+++ b/IHM/KDMUSIQUE/album.html
@@ -14,6 +14,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="js/search.js"></script>
 </head>
 
 <body>
@@ -24,14 +25,16 @@
             </a>
             <!--Search và micro-->
             <div class="input-group  mr-sm-2" id="searchhd">
-                <input class="form-control" type="search" placeholder="Search" aria-label="Search"  >
+                <input id="transcript" class="form-control" type="search" placeholder="Search" aria-label="Search">
+                <form action="search.html" method="get" id="formSearch"></form>
                 <div class="input-group-append">
-                    <button type="button" class="btn btn-light" style="box-shadow: 0 0;">
+                    <button id="btnSearchByVoice" onclick="SearchByVoice()" type="button" class="btn btn-light"
+                        style="box-shadow: 0 0;">
                         <i class="fa fa-microphone"></i>
                     </button>
                 </div>
             </div>
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">
+            <button class="btn btn-outline-light my-2 my-sm-0" type="submit" form="formSearch">
                 <i class="fa fa-search"></i>
             </button>
             <div class="seformhd">
@@ -389,6 +392,17 @@
                     La musique s'est arrêtée, les aiguilles se figent et je sens, je te sens</p>
             </div>
         </div>
+
+        <div class="popup">
+            <form id="labnol" action="search.html" method="GET">
+                <div class="popuptext" id="popupContent">Parlez quelques choses...
+                    <div class="speech">
+                        <img src="images/micro.png" />
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div id="temp"></div>
     </div>
     
     <div id="footer">
