--- a/IHM/KDMUSIQUE/test.html
+++ b/IHM/KDMUSIQUE/test.html
@@ -20,14 +20,16 @@
             
             <!--Search và micro-->
             <div class="input-group  mr-sm-2" id="searchhd">
-                <input class="form-control" type="search" placeholder="Search" aria-label="Search"  >
+                <input id="transcript" class="form-control" type="search" placeholder="Search" aria-label="Search">
+                <form action="search.html" method="get" id="formSearch"></form>
                 <div class="input-group-append">
-                    <button type="button" class="btn btn-light"style="box-shadow: 0 0;" >
+                    <button id="btnSearchByVoice" onclick="SearchByVoice()" type="button" class="btn btn-light"
+                        style="box-shadow: 0 0;">
                         <i class="fa fa-microphone"></i>
                     </button>
                 </div>
             </div>
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">
+            <button class="btn btn-outline-light my-2 my-sm-0" type="submit" form="formSearch">
                 <i class="fa fa-search"></i>
             </button>
             <div class="seformhd">
