--- a/IHM/KDMUSIQUE/artistes.html
+++ b/IHM/KDMUSIQUE/artistes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Artistes</title>
     <!--CSS-->
     <link rel="stylesheet" href="css/artistes.css">
     <link rel="stylesheet" href="css/test.css">
